--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <script type="text/javascript" src="Powerup.js"></script>
     <script type="text/javascript" src="Lives.js"></script>
     <script type="text/javascript" src="Timer.js"></script>
-    <script type="text/javascript" src="timeoutText.js"></script>
+    <script type="text/javascript" src="TimeoutText.js"></script>
     <style type="text/css">
         body {
             margin: 0;
