--- a/title.html
+++ b/title.html
@@ -11,6 +11,7 @@
     <script type="text/javascript" src="Background.js"></script>
     <script type="text/javascript" src="Powerup.js"></script>
     <script type="text/javascript" src="Lives.js"></script>
+    <script type="text/javascript" src="Control.js"></script>
     <!--<script type="text/javascript" src="Timer.js"></script>-->
     <style type="text/css">
         body {
